--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Home</title>
+ <title>Kelechi Ekwulugo Web Page</title>
 </head>
 <body>
- <p>Hello World</p>
+ <h1>Welcome!</h1>
+ <p>My name is Kelechi and this is my webpage. I plan to to create an online portfolio of all the great projects I will be developing throughtout the course of the DTTP program and in my spare time! If I have time, I can make it blog style with a recap of my weekly learning.</p>
+
+ <h2>Here is my learning for Week 3</h2>
+ <img src="Week3-Learning.png" alt="Week3-Learning">
+
+ <h2>Thanks for visiting!</h2>
+
 </body>
 </html>
