Add img index.html code and style.css

--- a/index.html
+++ b/index.html
@@ -3,16 +3,31 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="css/style.css" type="text/css">
  <title>Kelechi Ekwulugo Web Page</title>
 </head>
 <body>
- <h1>Welcome!</h1>
- <p>My name is Kelechi and this is my webpage. I plan to to create an online portfolio of all the great projects I will be developing throughtout the course of the DTTP program and in my spare time! If I have time, I can make it blog style with a recap of my weekly learning.</p>
+<header>
+ <h1>Student Bio</h1>
+ </header>
+ <div class="containter">
+  <section id="main-bio">
+<h2>Kelechi Ekwulugo</h2>
+<img src="IMG_1918.jpeg" alt="Kelechi Ekwulugo" id="bio-image">
+<p>My name is Kelechi and this is my webpage. I plan to to create an online portfolio of all the great projects I will
+ be developing throughtout the course of the DTTP program and in my spare time! If I have time, I can make it blog style
+ with a recap of my weekly learning.</p>
+  </section>
+ <section id="contact-info">
+  <h2>Contact Info</h2>
+  <ul>
+   <li><strong>Email:</strong> <a href="mailto:kekwulugo@gmail.com">kekwulugo@gmail.com</a></li>
+   <li><strong>Github:</strong> <a href="https://github.com/Kekwulugo">github.com/kekwulugo</a></li>
+   <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
+  </ul>
+ </section>
 
- <h2>Here is my learning for Week 3</h2>
- <img src="Week3-Learning.png" alt="Week3-Learning">
-
- <h2>Thanks for visiting!</h2>
+  </div>
 
 </body>
 </html>
