Add contact.css and modify contact.html

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
   <section id="main-bio">
 <h2>Kelechi Ekwulugo</h2>
 <img src="IMG_1918.jpeg" alt="Kelechi Ekwulugo" id="bio-image">
+
 <p>My name is Kelechi and this is my webpage. I plan to to create an online portfolio of all the great projects I will
  be developing throughtout the course of the DTTP program and in my spare time! If I have time, I can make it blog style
  with a recap of my weekly learning.</p>
+<a href="contact-us.html"><button>Get in Touch!</button></a>
   </section>
  <section id="contact-info">
   <h2>Contact Info</h2>
@@ -25,6 +27,7 @@
    <li><strong>Github:</strong> <a href="https://github.com/Kekwulugo">github.com/kekwulugo</a></li>
    <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
   </ul>
+  
  </section>
 
   </div>
